@@ -1,1 +1,0 @@
-EXTRA_DIST = as-version.m4
